--- a/kholle.html
+++ b/kholle.html
@@ -10,11 +10,14 @@
     <div class="navbar">
         <h1>Kholles</h1>
     </div>
+    <div class="button-container">
+        <button id="returnBtn" class="button">Retour</button>
+        <button id="viewKholleBtn" class="button">Voir les Kholles</button>
+    </div>
     <div class="container">
         <button id="addKholleBtn" class="button">Ajouter une Kholle</button>
-        <button id="saveKholleBtn" class="button">Enregistrer</button>
-        <button id="returnBtn" class="button">Retour</button>
         <div id="kholleContainer" class="flex-container"></div>
+        <button id="saveKholleBtn" class="button">Enregistrer</button>
     </div>
     <script src="kholle.js"></script>
 </body>
