--- a/message_imporant.html
+++ b/message_imporant.html
@@ -14,6 +14,7 @@
         <label for="info" class="label">Veuillez renseigner les informations :</label>
         <textarea id="info" class="textbox"></textarea>
         <button id="saveMessageBtn" class="button">Enregistrer</button>
+        <button id="viewMessagesBtn" class="button">Voir les messages importants</button>
         <button id="returnBtn" class="button">Retour</button>
     </div>
     <script src="message_important.js"></script>
