--- a/professeur_absent.html
+++ b/professeur_absent.html
@@ -10,11 +10,14 @@
     <div class="navbar">
         <h1>Professeurs Absents</h1>
     </div>
-    <div class="container">
-        <button id="addProfAbsentBtn" class="button">Ajouter un Professeur Absent</button>
-        <button id="saveProfAbsentBtn" class="button">Enregistrer</button>
+    <div class="button-container">
         <button id="returnBtn" class="button">Retour</button>
-        <div id="profAbsentContainer" class="flex-container"></div> <!-- Correction de l'ID -->
+        <button id="addProfAbsentBtn" class="button">Ajouter un Professeur Absent</button>
+        <button id="viewProfAbsBtn" class="button">Voir les Professeurs Absents</button>
+    </div>
+    <div class="container">
+        <div id="profAbsentContainer" class="flex-container"></div>
+        <button id="saveProfAbsentBtn" class="button">Enregistrer</button>
     </div>
     <script src="professeurs_absents.js"></script>
 </body>
