--- a/AffichageProfabs.html
+++ b/AffichageProfabs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Affichage des Professeurs Absents</title>
-    <link rel="stylesheet" href="AffichageProfAbs.css">
+    <link rel="stylesheet" href="AffichageprofAbs.css">
 </head>
 <body>
     <div class="navbar">
