--- a/AffichageProfabs.html
+++ b/AffichageProfabs.html
@@ -13,6 +13,6 @@
     <div class="container">
         <div id="profAbsDisplayContainer" class="flex-container"></div>
     </div>
-    <script src="AffichageProfAbs.js"></script>
+    <script src="Affichageprofabs.js"></script>
 </body>
 </html>
