--- a/affichagemes.html
+++ b/affichagemes.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Afficher les Messages</title>
+    <title>Afficher les Messages Importants</title>
     <link rel="stylesheet" href="affichagemes.css">
 </head>
 <body>
     <div class="navbar">
-        <h1>Afficher les Messages</h1>
+        <h1>Messages Importants</h1>
     </div>
     <div class="container">
-        <h2>Message Important :</h2>
-        <p id="displayMessage" class="message"></p>
+        <div id="displayMessage" class="message-box"></div>
+        <button id="returnBtn" class="button">Retour</button>
     </div>
     <script src="affichagemes.js"></script>
 </body>
