--- a/AffichageProfabs.html
+++ b/AffichageProfabs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Affichage des Professeurs Absents</title>
-    <link rel="stylesheet" href="Affichageprofabs.css">
+    <link rel="stylesheet" href="AffichageProfAbs.css">
 </head>
 <body>
     <div class="navbar">
@@ -13,6 +13,6 @@
     <div class="container">
         <div id="profAbsDisplayContainer" class="flex-container"></div>
     </div>
-    <script src="Affichageprofabs.js"></script>
+    <script src="AffichageProfAbs.js"></script>
 </body>
 </html>
