--- a/professeur_absent.html
+++ b/professeur_absent.html
@@ -18,6 +18,8 @@
     <div class="container">
         <div id="profAbsentContainer" class="flex-container"></div>
         <button id="saveProfAbsentBtn" class="button">Enregistrer</button>
+        <button id="cmtMarcheBtn" class="button">Comment ça marche ?</button>
+        <p id="cmtMarcheText" style="display: none;">Ici vous pouvez ajouter des professeurs absents,a qui vous donner un nom une date de début et une de fin d'absence, en cliquant sur enregistrer vous enregistrer les professeur absent qui s'afficheront sur la page "voir les professeur absents"</p>
     </div>
     <script src="professeurs_absents.js"></script>
 </body>
