--- a/message_imporant.html
+++ b/message_imporant.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messages Importants</title>
+    <title>Message Important</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="navbar">
-        <h1>Messages Importants</h1>
+        <h1>Message Important</h1>
     </div>
     <div class="container">
-        <label for="info" class="label">Veuillez renseigner les informations :</label>
+        <label for="info" class="label">Message:</label>
         <textarea id="info" class="textbox"></textarea>
         <button id="saveMessageBtn" class="button">Enregistrer</button>
         <button id="viewMessagesBtn" class="button">Voir les messages importants</button>
+        <button id="returnBtn" class="button">Retour</button>
+        <button id="cmtMarcheBtn" class="button">Comment ça marche ?</button>
+        <p id="cmtMarcheText" style="display: none;">Ici vous pouvez écrire des messages importants , ses messages peuvent être enregistrer en cliquant sur le bouton du meme nom , quand un messages est enregistré vus pouvez cliquez sur "Voir les messages important pour regarder l'affichage de ses messages"</p>
     </div>
     <script src="message_important.js"></script>
 </body>
